@@ -1,13 +1,18 @@
 package NLP;
 
+import java.io.*;
+
 public class NLPManager {
 
-	public static void startNLP(String userInput) {
-		 ProcessBuilder pb = new ProcessBuilder("python", "cleaning_and_parsing.py", userInput);
-		Process p = pb.start();
- 
+	public static String startNLP(String userInput) throws Exception {
+		Process p = Runtime.getRuntime().exec("pwd");
 		BufferedReader in = new BufferedReader(new InputStreamReader(p.getInputStream()));
-		String output = new String(in.readLine());
+		String pwd = in.readLine();
+        int posDir = pwd.indexOf("Text-based-dungeon-crawler");
+        String path = pwd.substring(0, posDir) + "Text-based-dungeon-crawler/game/src/NLP/call_functions.py";
+		Process p2 = Runtime.getRuntime().exec(String.format("python3 %s %s", path, userInput));
+		BufferedReader in2 = new BufferedReader(new InputStreamReader(p2.getInputStream()));
+		String output = in2.readLine();
 		return output;
 	}
 
